@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-11T02:09:24Z",
-  "count_outdated" : 272,
-  "uniques_outdated" : 205,
+  "timestamp" : "2025-12-19T02:08:45Z",
+  "count_outdated" : 273,
+  "uniques_outdated" : 206,
   "count" : 276,
   "uniques" : 209,
   "clones" : [
-    {
-      "timestamp": "2025-12-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-12-08T00:00:00Z",
       "count": 2,
