@@ -1,3 +1,12 @@
+2025-12-19T02:08:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20357470988 # 843
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-19
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 205 272 / 209 276
+* notice: next accum: outdated-unq outdated-all / unq all: 206 273 / 209 276
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-12-04] / []
+
 2025-12-11T02:09:24Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20119601849 # 835
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-11
